# foobar

./: Cargo.toml  fastly.toml
src/: 404.html  main.rs
