[package]
name = "fastly-compute-project"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.9.4"
hex = "0.4.3"
itertools = "0.11.0"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
